# 2023-cpp-autumn

./: .gitignore  Source1.cpp  Source2.cpp
2023-01.10-homework-3/: Homework3.sln
2023-01.10-homework-3/Task1/: 2023-01-10-homework3.sln  2023-01-10-homework3.vcxproj  Source.cpp  Source1.cpp  Task1.vcxproj
2023-01.10-homework-3/Task2/: Source.cpp  Source1.cpp  Task2.sln  Task2.vcxproj
2023-01.10-homework-3/Task3/: Source1.cpp  Task3.sln  Task3.vcxproj
2023-01.10-homework-3/Task4/: Source.cpp  Source1.cpp  Task4.sln  Task4.vcxproj
2023-01.10-homework-3/Task5/: Source.cpp  Source1.cpp  Task5.sln  Task5.vcxproj
2023-01.10-homework-3/Task6/: Source.cpp  Source1.cpp  (+2 more)
2023-10.10-homework-4/: Homework4-10.10.2023.sln  Homework4-10.10.2023.vcxproj
2023-14.12-homework-7/: Homework7.sln
2023-15.09-homework-1/: homework1.sln
2023-23-homework-2/: Project2.sln  Project2.vcxproj  Project2.vcxproj.filters  Source1.cpp  Source5.cpp
2023-23.09-homework-2/: Homework2.sln
2023-23.11-homework-6/: Homework6.sln  Homework6.vcxproj
2023-28.09-homework-5/: 2023-28.09-homework-5.sln  2023-28.09-homework-5.vcxproj
2023.10.10-homework-4/: Homework 4.sln
DFS_CMake/Deep_First_Search/: CMakeLists.txt
DFS_CMake/Deep_First_Search/example/: CMakeLists.txt  example.txt  main.cpp
DFS_CMake/Deep_First_Search/hdr/: DFS.h  GraphReader.h  LatexGenerator.h  SEdge.h
DFS_CMake/Deep_First_Search/src/: DFS.cpp  GraphReader.cpp  LatexGenerator.cpp  SEdge.cpp
Project1/: Source7.cpp
Task_nodes/: Task_nodes.sln  Task_nodes.vcxproj
Test_retake/: Test_retake.sln  Test_retake.vcxproj
(+161 files in other folders)
